# untargeted-metabolomics

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: 01_validate_inputs.py  02_feature_finding.py  03_align_features.py  03_build_library_index.py  04_blank_subtract.py  04_library_search.py  05_adduct_filter.py  05_report_tables.py  06_extract_ms2.py  07_link_ms2_features.py  08_build_library_index.py  09_library_search.py  10_report_tables.py  11_predict_structures.py  12_package_results.py  13_squid_anchor_localization.py  calibrate_ff_params.py  centwave_py.py  cleanup_feature_groups.py  config.yaml  prepare_metabolon.py  run_pipeline.py  utils.py
tests/: conftest.py  test_e2e_pipeline.py
